Client can now load into the game on play No updates happen yet

--- a/client-side/package.json
+++ b/client-side/package.json
@@ -21,6 +21,9 @@
     "eslint-plugin-vue": "^7.0.0"
   },
   "eslintConfig": {
+    "globals": {
+      "socket": "readonly"
+    },
     "root": true,
     "env": {
       "node": true
