--- a/server-side/settings.json
+++ b/server-side/settings.json
@@ -1,6 +1,7 @@
 {
   "screenSize": [15, 15],
   "startingSnakeSize": 3,
-  "percentMapEmpty": 80,
-  "numApples": 10
+  "percentMapEmpty": 90,
+  "numApples": 10,
+  "tickSpeed": 750
 }
